Fix a couple overflow issues

--- a/client/components/Guidebook/GuidebookPage.scss
+++ b/client/components/Guidebook/GuidebookPage.scss
@@ -1,9 +1,10 @@
 @import '../variables.scss';
 
 .body {
-  margin: 0 2.5rem 1rem;
+  padding: 0 2.5rem 1rem;
   width: 100%;
   color: #aeaeae;
+  overflow-y: scroll;
 
   li {
     padding-top: 0.35rem;
