--- a/client/components/OverlayStack/OverlayStack.scss
+++ b/client/components/OverlayStack/OverlayStack.scss
@@ -17,6 +17,7 @@
     .pane {
       width: 100%;
       height: 100%;
+      overflow-y: auto;
     }
 
     .tab_stack_overlay {
